
```mermaid

classDiagram
    class Employee {
    }

    class Project {
    }

    class Task {
    }

    Employee "0..*" o-- "0..*" Project : works on
    Project "1" *-- "many" Task : consists of
    Employee "1" o-- "many" Task : assigned to
    Project "0..*" o-- "0..*" Employee : has

classDiagram
    class Employee {
        +getId() int
        +setName(string name) void
        +getName() string
        +getEmail() string
        +assignTask(Task task) void
        +unassignTask(Task task) void
        +listAssignedTasks() List~Task~
    }

    class Project {
        +getProjectId() int
        +getProjectName() string
        +getStartDate() Date
        +getEndDate() Date
        +addTask(Task task) void
        +removeTask(Task task) void
        +listTasks() List~Task~
        +addEmployee(Employee employee) void
        +removeEmployee(Employee employee) void
        +listEmployees() List~Employee~
    }

    class Task {
        +getTaskId() int
        +getTaskName() string
        +getStatus() TaskStatus
        +getDueDate() Date
        +assignToEmployee(Employee employee) void
        +unassignFromEmployee() void
    }

    Employee "0..*" o-- "0..*" Project : works on
    Project "1" *-- "many" Task : consists of
    Employee "1" o-- "many" Task : assigned to
    Project "0..*" o-- "0..*" Employee : has

classDiagram
    class Employee {
        +getId() int
        +setName(string name) void
        +getName() string
        +getEmail() string
        +assignTask(Task task) void
        +unassignTask(Task task) void
        +listAssignedTasks() List~Task~
    }

    class Project {
        +getProjectId() int
        +getProjectName() string
        +getStartDate() Date
        +getEndDate() Date
        +addTask(Task task) void
        +removeTask(Task task) void
        +listTasks() List~Task~
        +addEmployee(Employee employee) void
        +removeEmployee(Employee employee) void
        +listEmployees() List~Employee~
    }

    class Task {
        +getTaskId() int
        +getTaskName() string
        +getStatus() TaskStatus
        +getDueDate() Date
        +assignToEmployee(Employee employee) void
        +unassignFromEmployee() void
    }

    class History {
        +recordChange(EntityType entityType, int entityId, ChangeType changeType, User user, Object oldState, Object newState) void
        +getChangeLog(EntityType entityType, int entityId) List~Map~
        +getChangeLogByUser(User user) List~Map~
        +getChangeLogByType(ChangeType type) List~Map~
        +undoChange(Map changeRecord) void
        +getEntityVersionHistory(EntityType entityType, int entityId) List~Map~
    }

    Employee "0..*" o-- "0..*" Project : works on
    Project "1" *-- "many" Task : consists of
    Employee "1" o-- "many" Task : assigned to
    Project "0..*" o-- "0..*" Employee : has
    Employee "1" *-- "many" History : has history
    Project "1" *-- "many" History : has history
    Task "1" *-- "many" History : has history


classDiagram
    class Employee {
        +getId()
        +setName()
        +getName()
        +getEmail()
        +assignTask()
        +unassignTask()
        +listAssignedTasks()
    }

    class Project {
        +getProjectId()
        +getProjectName()
        +getStartDate()
        +getEndDate()
        +addTask()
        +removeTask()
        +listTasks()
        +addEmployee()
        +removeEmployee()
        +listEmployees()
    }

    class Task {
        +getTaskId()
        +getTaskName()
        +getStatus()
        +getDueDate()
        +assignToEmployee()
        +unassignFromEmployee()
    }

    class History {
        +recordChange()
        +getChangeLog()
        +getChangeLogByUser()
        +getChangeLogByType()
        +undoChange()
        +getEntityVersionHistory()
    }

    Employee "0..*" o-- "0..*" Project : works on
    Project "1" *-- "many" Task : consists of
    Employee "1" o-- "many" Task : assigned to
    Project "0..*" o-- "0..*" Employee : has
    Employee "1" *-- "many" History : has history
    Project "1" *-- "many" History : has history
    Task "1" *-- "many" History : has history